--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -8,231 +8,121 @@
               <h4 class="card-title text-center">إضافة مستخدم</h4>
             </div>
             <div class="card-body text-right">
-              <form [formGroup]="usersForm" (submit)="formHandler($event)">
-                <div class="mb-3">
-                  <label for="Username" class="form-label">إسم المستخدم</label>
-                  <input
-                    formControlName="Username"
-                    type="text"
-                    class="form-control"
-                    id="Username"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getUserName.touched">
-                    <div
-                      *ngIf="getUserName.hasError('required')"
-                      id="Username"
-                      class="form-text text-danger"
-                    >
+              <form [formGroup]="usersForm" (submit)="formHandler($event)" >
+
+                <div class="row">
+                  <div class="col">
+                    <label for="Username" class="form-label">إسم المستخدم</label>
+                    <input  formControlName="Username" type="text" class="form-control" id="Username" aria-describedby="emailHelp">
+                    <ng-container *ngIf="getUserName.touched">
+                      <div *ngIf="getUserName.hasError('required')" id="Username" class="form-text text-danger">
                       من فضلك ادخل الاسم المستخدم
-                    </div>
-                    <div
-                      *ngIf="getUserName.hasError('minlength')"
-                      id="Username"
-                      class="form-text text-danger"
-                    >
-                      لا يقل الاسم عن 3 حروف
-                    </div>
-                    <!-- <div *ngIf="getUserName.hasError('pattern')" id="Username" class="form-text text-danger">
-                                   ادخل حروف فقط
-                                   </div> -->
-                  </ng-container>
+                      </div>
+                      <div *ngIf="getUserName.hasError('minlength')" id="Username" class="form-text text-danger">
+                        لا يقل الاسم عن 3 حروف
+                        </div>
+                      </ng-container>
+                  </div>
+                  <div class="col">
+                    <label for="name" class="form-label">  الاسم كامل</label>
+                    <input formControlName="name"  type="text" class="form-control" id="name" aria-describedby="emailHelp">
+                    <ng-container *ngIf="getName.touched" >
+                      <div *ngIf="getName.hasError('required')" id="name" class="form-text text-danger  w-75">
+                       من فضلك ادخل الاسم كامل
+                      </div>
+                      <div *ngIf="getName.hasError('minlength')" id="name" class="form-text text-danger  w-75">
+                        لا يقل الاسم عن 3 حروف
+                       </div>
+                       <div *ngIf="getName.hasError('pattern')" id="Username" class="form-text text-danger">
+                        ادخل حروف فقط
+                        </div>
+                      </ng-container>
                 </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label"> كلمة المرور</label>
-                  <input
-                    formControlName="password"
-                    type="password"
-                    class="form-control"
-                    id="password"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getUserPassword.touched">
-                    <div
-                      *ngIf="getUserPassword.hasError('required')"
-                      id="password"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل كلمة المرور
-                    </div>
-                    <div
-                      *ngIf="getUserPassword.hasError('pattern')"
-                      id="password"
-                      class="form-text text-danger w-75"
-                    >
-                      يجب ان تحتوى كلمة المرور على الاقل حرف كبير وحروف خاصة
-                      وارقام واحرف صغيرة
-                    </div>
-                  </ng-container>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <label for="password" class="form-label"> كلمة المرور</label>
+                      <input formControlName="password" type="password" class="form-control" id="password" aria-describedby="emailHelp">
+                      <ng-container *ngIf="getUserPassword.touched">
+                        <div *ngIf="getUserPassword.hasError('required')" id="password" class="form-text text-danger  w-75">
+                         من فضلك ادخل كلمة المرور
+                        </div>
+                        <div *ngIf="getUserPassword.hasError('pattern')" id="password" class="form-text text-danger  w-75">
+                          يجب ان تحتوى كلمة المرور على الاقل حرف كبير وحروف خاصة وارقام واحرف صغيرة
+                         </div>
+                        </ng-container>
+                  </div>
+                  <div class="col">
+                    <label for="email" class="form-label">  البريد الالكتروني</label>
+                      <input formControlName="email"  type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                      <ng-container *ngIf="getUserEmail.touched">
+                        <div *ngIf="getUserEmail.hasError('required')" id="email" class="form-text text-danger  w-75">
+                         من فضلك ادخل البريد الالكتروني
+                        </div>
+                        <div *ngIf="getUserEmail.hasError('email')" id="email" class="form-text text-danger  w-75">
+                         البريد الالكترونى غير صالح
+                         </div>
+                        </ng-container>
+                </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <label for="phone" class="form-label"> التليفون المحمول</label>
+                      <input formControlName="phone" type="text" class="form-control" id="phone" aria-describedby="emailHelp">
+                      <ng-container *ngIf="getUserPhone.touched">
+                        <div *ngIf="getUserPhone.hasError('required')" id="phone" class="form-text text-danger  w-75">
+                         من فضلك  ادخل رقم المحمول
+                        </div>
+                        <div *ngIf="getUserPhone.hasError('max')" id="phone" class="form-text text-danger  w-75">
+                          يجب ان يحتوى الرقم على 11 رقم فقط
+                         </div>
+                         <div *ngIf="getUserPhone.hasError('pattern')" id="phone" class="form-text text-danger  w-75">
+                          رقم المحمول غير صالح
+                         </div>
+                        </ng-container>
+                  </div>
+                  <div class="col">
+                    <label for="disabledSelect" class="form-label">اسم المجموعه</label>
+                      <select  formControlName="group" class="form-select" >
+                        <option  *ngFor="let G of Groups" [value]="G.groupId">{{G.groupName}} </option>
+                      </select>
+                      <ng-container *ngIf="getUserGroup.touched">
+                        <div *ngIf="getUserGroup.hasError('required')" id="disabledSelect" class="form-text text-danger  w-75">
+                         من فضلك اختر  اسم المجموعة
+                        </div>
+                        </ng-container>
+                </div>
                 </div>
 
-                <div class="mb-3">
-                  <label for="name" class="form-label"> الاسم كامل</label>
-                  <input
-                    formControlName="name"
-                    type="text"
-                    class="form-control"
-                    id="name"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getName.touched">
-                    <div
-                      *ngIf="getName.hasError('required')"
-                      id="name"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل الاسم كامل
-                    </div>
-                    <div
-                      *ngIf="getName.hasError('minlength')"
-                      id="name"
-                      class="form-text text-danger w-75"
-                    >
-                      لا يقل الاسم عن 3 حروف
-                    </div>
-                    <div
-                      *ngIf="getName.hasError('pattern')"
-                      id="Username"
-                      class="form-text text-danger"
-                    >
-                      ادخل حروف فقط
-                    </div>
-                  </ng-container>
+                <div class="row">
+                  <div class="col">
+                    <label for="disabledSelect" class="form-label">الفرع</label>
+                      <select  formControlName="branch"   class="form-select">
+                        <option *ngFor="let B of Branches" [value]="B.id">{{B.name}}</option>
+                      </select>
+                      <ng-container *ngIf="getUserBranch.touched">
+                        <div *ngIf="getUserBranch.hasError('required')"  class="form-text text-danger  w-75">
+                         من فضلك اختر اسم الفرع
+                        </div>
+                        </ng-container>
+                  </div>
+                  <div class="col">
+                    <label for="disabledSelect" class="form-label">اللغة</label>
+                      <select formControlName="language"  class="form-select">
+                        <option *ngFor="let L of Languages" [value]="L.languageId">{{L.languageName}}</option>
+                      </select>
+                      <ng-container *ngIf="getUserLanguage.touched">
+                        <div *ngIf="getUserLanguage.hasError('required')" id="disabledSelect" class="form-text text-danger  w-75">
+                         من فضلك اختر اللغة
+                        </div>
+                        </ng-container>
                 </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label">
-                    البريد الالكتروني</label
-                  >
-                  <input
-                    formControlName="email"
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getUserEmail.touched">
-                    <div
-                      *ngIf="getUserEmail.hasError('required')"
-                      id="email"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل البريد الالكتروني
-                    </div>
-                    <div
-                      *ngIf="getUserEmail.hasError('email')"
-                      id="email"
-                      class="form-text text-danger w-75"
-                    >
-                      البريد الالكترونى غير صالح
-                    </div>
-                  </ng-container>
                 </div>
-                <div class="mb-3">
-                  <label for="phone" class="form-label">
-                    التليفون المحمول</label
-                  >
-                  <input
-                    formControlName="phone"
-                    type="text"
-                    class="form-control"
-                    id="phone"
-                    aria-describedby="emailHelp"
-                  />
-                  <ng-container *ngIf="getUserPhone.touched">
-                    <div
-                      *ngIf="getUserPhone.hasError('required')"
-                      id="phone"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك ادخل رقم المحمول
-                    </div>
-                    <div
-                      *ngIf="getUserPhone.hasError('max')"
-                      id="phone"
-                      class="form-text text-danger w-75"
-                    >
-                      يجب ان يحتوى الرقم على 11 رقم فقط
-                    </div>
-                    <div
-                      *ngIf="getUserPhone.hasError('pattern')"
-                      id="phone"
-                      class="form-text text-danger w-75"
-                    >
-                      رقم المحمول غير صالح
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="disabledSelect" class="form-label"
-                    >اسم المجموعه</label
-                  >
-                  <select formControlName="group" class="form-select">
-                    <option *ngFor="let G of Groups" [value]="G.groupId">
-                      {{ G.groupName }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getUserGroup.touched">
-                    <div
-                      *ngIf="getUserGroup.hasError('required')"
-                      id="disabledSelect"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك اختر اسم المجموعة
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="disabledSelect" class="form-label">الفرع</label>
-                  <select formControlName="branch" class="form-select">
-                    <option *ngFor="let B of Branches" [value]="B.id">
-                      {{ B.name }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getUserBranch.touched">
-                    <div
-                      *ngIf="getUserBranch.hasError('required')"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك اختر اسم الفرع
-                    </div>
-                  </ng-container>
-                </div>
-                <div class="mb-3">
-                  <label for="disabledSelect" class="form-label">اللغة</label>
-                  <select formControlName="language" class="form-select">
-                    <option *ngFor="let L of Languages" [value]="L.languageId">
-                      {{ L.languageName }}
-                    </option>
-                  </select>
-                  <ng-container *ngIf="getUserLanguage.touched">
-                    <div
-                      *ngIf="getUserLanguage.hasError('required')"
-                      id="disabledSelect"
-                      class="form-text text-danger w-75"
-                    >
-                      من فضلك اختر اللغة
-                    </div>
-                  </ng-container>
-                </div>
-                <button (click)="back()" class="btn btn-primary m-2">
-                  تراجع
-                </button>
-                <button
-                  [disabled]="!usersForm.valid"
-                  (click)="addUser()"
-                  *ngIf="!flag"
-                  class="btn btn-danger m-2"
-                >
-                  إضافة
-                </button>
-                <button
-                  (click)="saveUser()"
-                  *ngIf="flag"
-                  class="btn btn-success m-2"
-                >
-                  تعديل
-                </button>
-              </form>
+                  <button (click)="back()" class="btn btn-primary m-2 float-start">تراجع</button>
+                  <button [disabled]="!usersForm.valid"  (click)="addUser()" *ngIf="!flag" class="btn btn-danger m-2 float-start">إضافة </button>
+                  <button  (click)="saveUser()" *ngIf="flag" class="btn btn-success m-2 float-start">تعديل </button>
+
+                </form>
             </div>
           </div>
         </div>
@@ -335,9 +225,9 @@
       </div>
   </div>
 </div>-->
-<p c>
+<p class="p-3 d-flex justify-content-start">
   <button
-    class="btn btn-primary"
+    class="btn btn-primary p-3 fs-4"
     type="button"
     data-bs-toggle="collapse"
     data-bs-target="#collapseExample"
