--- a/src/app/Components/students/students.component.html
+++ b/src/app/Components/students/students.component.html
@@ -640,9 +640,9 @@
         </div>
       </div>
       </div>-->
-<p c>
+<p class="p-3 d-flex justify-content-start">
   <button
-    class="btn btn-primary"
+    class="btn btn-primary p-3 fs-4"
     type="button"
     data-bs-toggle="collapse"
     data-bs-target="#collapseExample"
